--- a/Treinamento_CNN.ipynb
+++ b/Treinamento_CNN.ipynb
@@ -47,15 +47,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_oj5I6fco9eB",
-        "outputId": "812eb55a-c48b-4916-d534-1c6ff97ffc06"
+        "outputId": "6a1bce58-3332-4930-be6a-2bb4eda8bd96"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -101,9 +101,9 @@
           "height": 17
         },
         "id": "YYGxUH68sUuH",
-        "outputId": "baf9595c-dde7-4dbd-cd00-0b118a8151e7"
+        "outputId": "307d77e8-c615-401d-9f6a-2a06b6376c5e"
       },
-      "execution_count": 26,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -160,12 +160,12 @@
       "metadata": {
         "id": "W6LWWnwVpLVQ"
       },
-      "execution_count": 28,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 4,
       "metadata": {
         "id": "YxMcfFGUMqoD"
       },
@@ -177,14 +177,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
         },
         "id": "aiuYPDsqbeqQ",
-        "outputId": "3907a638-f2f5-400e-b566-8e8f91f37fe2"
+        "outputId": "8fd1a53c-a20f-4f8f-8e8a-ccc1771d937e"
       },
       "outputs": [
         {
@@ -198,7 +198,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-cfc94eea-4d3e-424a-8eb7-b33b43f757b7\">\n",
+              "  <div id=\"df-c30f70bf-72ad-4a8c-8e51-6312b2edb759\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -237,7 +237,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cfc94eea-4d3e-424a-8eb7-b33b43f757b7')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c30f70bf-72ad-4a8c-8e51-6312b2edb759')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -288,12 +288,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-cfc94eea-4d3e-424a-8eb7-b33b43f757b7 button.colab-df-convert');\n",
+              "          document.querySelector('#df-c30f70bf-72ad-4a8c-8e51-6312b2edb759 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-cfc94eea-4d3e-424a-8eb7-b33b43f757b7');\n",
+              "          const element = document.querySelector('#df-c30f70bf-72ad-4a8c-8e51-6312b2edb759');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -316,7 +316,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 5
         }
       ],
       "source": [
@@ -336,9 +336,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QN8zzra54iMy",
-        "outputId": "bb3faf21-7b43-480f-9aac-4c4ac5c3ded6"
+        "outputId": "39bc30e2-5f4f-431b-cc87-60b97071a0e5"
       },
-      "execution_count": 31,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -348,7 +348,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 6
         }
       ]
     },
@@ -361,12 +361,12 @@
       ],
       "metadata": {
         "id": "5ZWXjrkH1HK5",
-        "outputId": "3c98cede-f635-4781-8674-c884880c2fb8",
+        "outputId": "1a6671aa-d101-42c1-9012-bb6d4f60c6c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -376,7 +376,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 7
         }
       ]
     },
@@ -389,12 +389,12 @@
       ],
       "metadata": {
         "id": "UhOYgOU8EN6R",
-        "outputId": "b586042d-c22a-4d51-efbd-f2543e08d793",
+        "outputId": "12a0a632-128d-4112-9d88-e5077f8ab6d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -404,7 +404,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 8
         }
       ]
     },
@@ -417,12 +417,12 @@
       ],
       "metadata": {
         "id": "2a04Qu0KNPCl",
-        "outputId": "f995efdc-982b-435a-9a44-285212edee05",
+        "outputId": "041c7898-4f12-478b-8e86-5985601dfe84",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,7 +457,7 @@
       "metadata": {
         "id": "8uLpWFP05veb"
       },
-      "execution_count": 43,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -473,7 +473,7 @@
       "metadata": {
         "id": "JZqSl5-fzg5e"
       },
-      "execution_count": 36,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -486,32 +486,34 @@
       "metadata": {
         "id": "Xy5zX1RIzZ9A"
       },
-      "execution_count": 37,
+      "execution_count": 29,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "train_seq_x.shape"
+        "X.shape\n",
+        "X"
       ],
       "metadata": {
-        "id": "oBf9G-kl2qWm",
-        "outputId": "3b4c0b9d-f47b-4174-9e56-b6379b009fe5",
+        "id": "OY0B7cnA9woa",
+        "outputId": "decae40e-c073-4660-9405-b88fb393eaa2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(3420, 25)"
+              "<4886x9140 sparse matrix of type '<class 'numpy.float64'>'\n",
+              "\twith 49676 stored elements in Compressed Sparse Row format>"
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 81
         }
       ]
     },
@@ -542,7 +544,7 @@
       "metadata": {
         "id": "oinV3GGN22R-"
       },
-      "execution_count": 39,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -576,12 +578,27 @@
       "metadata": {
         "id": "lGjZVTt-GGiA"
       },
-      "execution_count": 40,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "source": [
+        "embedding_layer = layers.Embedding(quantidade_palavras_unicas,\n",
+        "                            300,\n",
+        "                            weights=[MATRIZ_CBOW_300_BASE_2],\n",
+        "                            input_length=max_len,\n",
+        "                            trainable=False)"
+      ],
+      "metadata": {
+        "id": "8EprJG_QP8_e"
+      },
+      "execution_count": 86,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 84,
       "metadata": {
         "id": "AHk31johw4MA"
       },
@@ -594,7 +611,7 @@
         "    input_layer = layers.SpatialDropout1D(0.3)(input_layer)\n",
         "\n",
         "    # Add the word embedding Layer\n",
-        "    embedding_layer = layers.Embedding(len(word_index) + 1, 300, weights=[MATRIZ_CBOW_300_BASE_2], trainable=True)(input_layer)\n",
+        "       # embedding_layer = layers.Embedding(X.shape[1] + 1, 300, weights=[MATRIZ_CBOW_300_BASE_2], trainable=True)(input_layer)\n",
         "    embedding_layer = layers.SpatialDropout1D(0.3)(embedding_layer)\n",
         "\n",
         "    # Add the convolutional Layer\n",
@@ -618,37 +635,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
-        "id": "20ODtGE3xw3H",
-        "outputId": "0c40754b-60fa-4622-cab0-411044534ba7",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 362
-        }
+        "id": "20ODtGE3xw3H"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-44-d1a0b7bd9331>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mclassifier\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_cnn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax_len\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0maccuracyCNN\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclassifier\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtrain_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_y\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_y\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mis_neural_net\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"CNN, Word Embeddings - accuracy\"\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0maccuracyCNN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-41-925aa961a985>\u001b[0m in \u001b[0;36mcreate_cnn\u001b[0;34m(input_size)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;31m# Add the word embedding Layer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0membedding_layer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEmbedding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword_index\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m300\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mMATRIZ_CBOW_300_BASE_2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrainable\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_layer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0membedding_layer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSpatialDropout1D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0membedding_layer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/keras/utils/traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     65\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# pylint: disable=broad-except\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m       \u001b[0mfiltered_tb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_process_traceback_frames\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__traceback__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 67\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     68\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m       \u001b[0;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/keras/engine/base_layer.py\u001b[0m in \u001b[0;36mset_weights\u001b[0;34m(self, weights)\u001b[0m\n\u001b[1;32m   1863\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mref_shape\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_compatible_with\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweight_shape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1864\u001b[0m           raise ValueError(\n\u001b[0;32m-> 1865\u001b[0;31m               \u001b[0;34mf'Layer {self.name} weight shape {ref_shape} '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1866\u001b[0m               \u001b[0;34m'is not compatible with provided weight '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1867\u001b[0m               f'shape {weight_shape}.')\n",
-            "\u001b[0;31mValueError\u001b[0m: Layer embedding_4 weight shape (9148, 300) is not compatible with provided weight shape (9085, 300)."
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "classifier = create_cnn(max_len)\n",
         "accuracyCNN = train_model(classifier,train_x, train_y, valid_x, valid_y, is_neural_net=True)\n",
         "\n",
         "print (\"CNN, Word Embeddings - accuracy\",  accuracyCNN)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://machinelearningmastery.com/use-word-embedding-layers-deep-learning-keras/\n",
+        "\n",
+        "\n",
+        "\n",
+        "https://blog.keras.io/using-pre-trained-word-embeddings-in-a-keras-model.html"
+      ],
+      "metadata": {
+        "id": "dU6cqtBSOXm9"
+      }
     }
   ]
 }
