Usando modelo do notebook exemplo Neural Networks.ipynb

--- a/Copy_CNN_Rafa.ipynb
+++ b/Copy_CNN_Rafa.ipynb
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "N5Vhr4_vECld"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -60,15 +60,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ptoQwAGEDQnl",
-        "outputId": "4befe12c-7ade-458b-caef-bfbf5b0e6d8b"
+        "outputId": "81d58c6e-8bac-4e67-df34-84d129482886"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -101,7 +101,7 @@
       "metadata": {
         "id": "OeOYrHW9Bxs_"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -115,7 +115,7 @@
       "metadata": {
         "id": "db4KNc_2Ixyu"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -127,13 +127,14 @@
       "metadata": {
         "id": "pwcjgZd9I6AD"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def preprocess(tweets_list, max_text_length):\n",
+        "    print(max_text_length)\n",
         "    preprocess_tweets_list, tweets_list_tokenizer = tokenize(tweets_list)\n",
         "\n",
         "    preprocess_tweets_list = pad(preprocess_tweets_list, length=max_text_length)\n",
@@ -143,7 +144,7 @@
       "metadata": {
         "id": "fNMyJgcsI8AU"
       },
-      "execution_count": 6,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -158,7 +159,7 @@
       "metadata": {
         "id": "pX78imOBI9l8"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -198,7 +199,7 @@
       "metadata": {
         "id": "hTMVKvfRrQ9x"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -229,7 +230,7 @@
       "metadata": {
         "id": "xf_v4U5DDfU8"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -244,39 +245,39 @@
     {
       "cell_type": "code",
       "source": [
-        "tweets = pd.read_csv(PATH_BASE2_LEILA_LIMPISSIMA_BALANCEADA, index_col=0)\n",
+        "tweets = pd.read_csv(PATH_BASE_2_CLASSIFICADA_BALANCEADA, index_col=0)\n",
         "text_column = tweets['text']\n",
         "text_column"
       ],
       "metadata": {
         "id": "7wJXwK7jCkyx",
-        "outputId": "3f64142e-b7b4-4b60-c14c-f8ca3237a538",
+        "outputId": "a521b03f-ff95-4ca0-bd2a-12e6e2046390",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0                            ambiguinho eu estou com nojo\n",
-              "1                        menino do céu para que está feio\n",
-              "2       já pergunto a porra do trem já sabendo da vdd ...\n",
-              "3                                   sardella só faz merda\n",
-              "4                        foda se na real vou tratar igual\n",
-              "                              ...                        \n",
-              "4881    estou sem presidente por quatro anos nãomerepr...\n",
-              "4882    somos todos iguais braços dados ou não quem sa...\n",
-              "4883    que deus nos proteja e cuidem um do outro somo...\n",
-              "4884                         quem será que não sabe votar\n",
-              "4885         disse o cidadão que votou no gaucho de geral\n",
-              "Name: text, Length: 4886, dtype: object"
+              "0        retwet bahia fazer sendo governada pt sei baia...\n",
+              "1        k imagine atitude mental negativa f idiota fec...\n",
+              "2        general heleno é bolsonaro rosna late late lat...\n",
+              "3        alan ser cara pau achar havendo ruptura nesse ...\n",
+              "4        canalhascomunistas caçarão chapa presidencialn...\n",
+              "                               ...                        \n",
+              "10569               af hein amiga mandar outro número mail\n",
+              "10570    egoísmo é grande parte produto sociedade émile...\n",
+              "10571    abençoado novo linda querida obrigada carinho ...\n",
+              "10572                              leva gente amorzinhos d\n",
+              "10573                                   k k ata meia sonsa\n",
+              "Name: text, Length: 10574, dtype: object"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 86
         }
       ]
     },
@@ -289,54 +290,55 @@
       ],
       "metadata": {
         "id": "ud3ADezRSHtI",
-        "outputId": "98512735-5b0b-4c4a-c97f-f3748a0796d3",
+        "outputId": "29118eb0-6942-40cb-b0c4-ea1ebf8699f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "25"
+              "55"
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 87
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 88,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UxNdO2PW2E5a",
-        "outputId": "21bb6eb7-1d2a-457f-a20e-a7d353797680"
+        "outputId": "79efe5ab-b0dd-472e-b456-042aab78485b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0       1\n",
-            "1       1\n",
-            "2       1\n",
-            "3       1\n",
-            "4       1\n",
-            "       ..\n",
-            "4881    0\n",
-            "4882    0\n",
-            "4883    0\n",
-            "4884    0\n",
-            "4885    0\n",
-            "Name: label, Length: 4886, dtype: int64\n",
+            "0        1\n",
+            "1        1\n",
+            "2        1\n",
+            "3        1\n",
+            "4        1\n",
+            "        ..\n",
+            "10569    0\n",
+            "10570    0\n",
+            "10571    0\n",
+            "10572    0\n",
+            "10573    0\n",
+            "Name: label, Length: 10574, dtype: int64\n",
             "<class 'pandas.core.series.Series'>\n",
-            "Vocabulary size: 9147\n"
+            "None\n",
+            "Vocabulary size: 19043\n"
           ]
         }
       ],
@@ -348,6 +350,305 @@
         "    \n",
         "text_vocab_size = len(text_tokenizer.word_index)\n",
         "print(\"Vocabulary size:\", text_vocab_size)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train, x_test, y_train, y_test = train_test_split(input_data, output_label, test_size=0.2, random_state=19)"
+      ],
+      "metadata": {
+        "id": "TC_9tX0QZ65k"
+      },
+      "execution_count": 89,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train.shape"
+      ],
+      "metadata": {
+        "id": "FLKz2OhUaVKq",
+        "outputId": "70c9df70-cb71-4420-c53a-32dd12c54058",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(8459, 55)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 90
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = keras.Sequential([\n",
+        "    keras.layers.Flatten(input_shape=(55,)),  # input layer (1)\n",
+        "    keras.layers.Dense(128, activation='relu'),  # hidden layer (2)\n",
+        "    keras.layers.Dense(1, activation='sigmoid') # output layer (3)\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "dT9L48k-aON7"
+      },
+      "execution_count": 96,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# model.compile(optimizer='adam',\n",
+        "#               loss='sparse_categorical_crossentropy',\n",
+        "#               metrics=['accuracy'])\n",
+        "\n",
+        "model.compile(optimizer='adam',\n",
+        "              loss='binary_crossentropy',\n",
+        "              metrics=['accuracy'])"
+      ],
+      "metadata": {
+        "id": "gUi3Br98ao8Q"
+      },
+      "execution_count": 97,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.fit(x_train, y_train, epochs=20)  # we pass the data, labels and epochs and watch the magic!"
+      ],
+      "metadata": {
+        "id": "xJscev-gasf3",
+        "outputId": "20d026c7-7419-4cfd-ca7e-64fd595d502b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/20\n",
+            "265/265 [==============================] - 1s 3ms/step - loss: 127.4522 - accuracy: 0.5191\n",
+            "Epoch 2/20\n",
+            "265/265 [==============================] - 1s 3ms/step - loss: 58.1373 - accuracy: 0.5313\n",
+            "Epoch 3/20\n",
+            "265/265 [==============================] - 1s 3ms/step - loss: 42.0499 - accuracy: 0.5456\n",
+            "Epoch 4/20\n",
+            "265/265 [==============================] - 1s 3ms/step - loss: 37.0814 - accuracy: 0.5538\n",
+            "Epoch 5/20\n",
+            "265/265 [==============================] - 1s 2ms/step - loss: 31.8804 - accuracy: 0.5617\n",
+            "Epoch 6/20\n",
+            "265/265 [==============================] - 1s 3ms/step - loss: 30.1543 - accuracy: 0.5590\n",
+            "Epoch 7/20\n",
+            "265/265 [==============================] - 1s 3ms/step - loss: 25.9385 - accuracy: 0.5787\n",
+            "Epoch 8/20\n",
+            "265/265 [==============================] - 1s 3ms/step - loss: 25.2313 - accuracy: 0.5745\n",
+            "Epoch 9/20\n",
+            "265/265 [==============================] - 1s 3ms/step - loss: 24.1592 - accuracy: 0.5783\n",
+            "Epoch 10/20\n",
+            "265/265 [==============================] - 1s 3ms/step - loss: 21.5176 - accuracy: 0.5856\n",
+            "Epoch 11/20\n",
+            "265/265 [==============================] - 1s 3ms/step - loss: 19.2457 - accuracy: 0.5827\n",
+            "Epoch 12/20\n",
+            "265/265 [==============================] - 1s 3ms/step - loss: 18.7743 - accuracy: 0.5890\n",
+            "Epoch 13/20\n",
+            "265/265 [==============================] - 1s 3ms/step - loss: 17.5495 - accuracy: 0.5858\n",
+            "Epoch 14/20\n",
+            "265/265 [==============================] - 1s 2ms/step - loss: 16.2093 - accuracy: 0.5924\n",
+            "Epoch 15/20\n",
+            "265/265 [==============================] - 1s 3ms/step - loss: 14.6043 - accuracy: 0.5943\n",
+            "Epoch 16/20\n",
+            "265/265 [==============================] - 1s 2ms/step - loss: 15.6251 - accuracy: 0.6002\n",
+            "Epoch 17/20\n",
+            "265/265 [==============================] - 1s 2ms/step - loss: 14.5907 - accuracy: 0.5906\n",
+            "Epoch 18/20\n",
+            "265/265 [==============================] - 1s 2ms/step - loss: 13.4935 - accuracy: 0.6000\n",
+            "Epoch 19/20\n",
+            "265/265 [==============================] - 1s 3ms/step - loss: 11.4737 - accuracy: 0.6046\n",
+            "Epoch 20/20\n",
+            "265/265 [==============================] - 1s 2ms/step - loss: 11.0560 - accuracy: 0.6056\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7fe16fa4f3d0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 98
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_loss, test_acc = model.evaluate(x_test,  y_test, verbose=1) \n",
+        "\n",
+        "print('Test accuracy:', test_acc)"
+      ],
+      "metadata": {
+        "id": "e2ln2dT-bCqK",
+        "outputId": "7fa7f4dd-5f4d-4c1a-b59f-9825d1579349",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "67/67 [==============================] - 0s 2ms/step - loss: 24.5496 - accuracy: 0.5319\n",
+            "Test accuracy: 0.5319148898124695\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "67/67 [==============================] - 0s 2ms/step - loss: 12.5913 - accuracy: 0.5357\n",
+        "Test accuracy: 0.5356974005699158"
+      ],
+      "metadata": {
+        "id": "UL75kpJleUxE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions = model.predict(x_test)"
+      ],
+      "metadata": {
+        "id": "yXJ3yIdsbY6X"
+      },
+      "execution_count": 100,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions[0]"
+      ],
+      "metadata": {
+        "id": "Q5RQyxbSbcIp",
+        "outputId": "c8ea0db6-943b-477c-fbbc-14b3703d70df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1.4872692e-16], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 101
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.argmax(predictions[0])"
+      ],
+      "metadata": {
+        "id": "ymeg0RSqboj0",
+        "outputId": "23d201ee-65a4-41da-c1ba-937789b29f6f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 103
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_array = list(y_test)\n",
+        "y_array[2]"
+      ],
+      "metadata": {
+        "id": "F96smohFbr-6",
+        "outputId": "9b4da451-3870-424a-b9f4-53f22cfb8206",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 85
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_test"
+      ],
+      "metadata": {
+        "id": "gC8SsvZfcA9Z",
+        "outputId": "caa4a741-14dc-4b79-ead6-abb8650d6eb8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1336,  5706,  2402, ...,     0,     0,     0],\n",
+              "       [  189,   712,  3790, ...,     0,     0,     0],\n",
+              "       [ 2077,  2392,  8764, ...,     0,     0,     0],\n",
+              "       ...,\n",
+              "       [   67,  1122,  5017, ...,     0,     0,     0],\n",
+              "       [   67,  5323, 18812, ...,     0,     0,     0],\n",
+              "       [  145,   234,    91, ...,     0,     0,     0]], dtype=int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 81
+        }
       ]
     },
     {
@@ -370,7 +671,7 @@
       "metadata": {
         "id": "yBGbbGdfL7ps"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -382,7 +683,7 @@
       "metadata": {
         "id": "bPL3sYgZ1h7j"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -397,7 +698,7 @@
       "metadata": {
         "id": "CK6Ipo-7JNx4"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -431,7 +732,7 @@
       "metadata": {
         "id": "wKH2mHM5r8_6"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -454,7 +755,7 @@
       "metadata": {
         "id": "wYnrq-34uZX5"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -470,7 +771,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -528,7 +829,7 @@
         "id": "LoC4rSJedE-K",
         "outputId": "665cd4e3-bd0f-433a-b106-252be0e29b43"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -575,7 +876,7 @@
           "height": 590
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -626,7 +927,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -686,7 +987,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -733,7 +1034,7 @@
         "                              )\n",
         "plt.show()"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -823,7 +1124,7 @@
       "metadata": {
         "id": "vrC1KA9FLUK1"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -836,7 +1137,7 @@
       "metadata": {
         "id": "WY8X0khP0x8w"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -852,7 +1153,7 @@
           "height": 754
         }
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
