--- a/RotinaDeTreinamentoModelosDL.ipynb
+++ b/RotinaDeTreinamentoModelosDL.ipynb
@@ -1680,6 +1680,24 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "https://colab.research.google.com/drive/18ejmbJn9KVcqWJzOvAz84HxIpPMeTijU"
+      ],
+      "metadata": {
+        "id": "0UQJpJ_GTYvU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "rU7gd_uYTZGd"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "TuzhOW-tx5ek"
       },
